<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ikholopov.personal.myyandextranslate.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/settings_tab_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/reset_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refresh_languages_database"
                style="@style/SettingsButton"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/clear_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_history"
                style="@style/SettingsButton"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/clear_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_favorites"
                style="@style/SettingsButton"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
