<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ikholopov.personal.myyandextranslate.TranslateFragment">
    <LinearLayout
        android:id="@+id/translate_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/left_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
            </Spinner>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/swap_button"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:text="@string/arrows"/>
            <Spinner
                android:id="@+id/right_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:elevation="0dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.ikholopov.personal.myyandextranslate.ui.TranslateEditText
                    android:id="@+id/text_to_translate"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="@string/translate_edit_text_hint"
                    android:gravity="top"
                    android:paddingRight="40dp"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/clear_text_to_translate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end|top"
                    android:background="@mipmap/ic_clear" />
            </FrameLayout>
            <ScrollView
                android:id="@+id/translated_text_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_margin="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/translated_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:elevation="5dp"
                            android:freezesText="true"
                            android:padding="10dp"
                            android:layout_marginRight="20dp"
                            android:textSize="20dp"/>

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/translated_text_fav"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end|top"/>
                    </FrameLayout>
                </LinearLayout>
            </ScrollView>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/translate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_button"
                android:background="@color/colorPrimary"
                android:layout_gravity="end|top"
                android:layout_marginRight="10dp"
                android:elevation="20dp"/>
            <ProgressBar
                android:id="@+id/progress_bar_translation"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone">
            </ProgressBar>
            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/error_failed_to_translate"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/retry"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
